fix click dropdown on mobile

--- a/frontend/web/less/mobile/post.less
+++ b/frontend/web/less/mobile/post.less
@@ -332,6 +332,7 @@
         #filter_post,#filter_view,#filter_brilliant{
             display: none;
             width: 100%;
+            overflow: hidden;
             .item_post{
                 background: #fff;
                 width: 100%;
